# wjes-backend

./: Dockerfile  dependencies.py  docker-compose.yml  llm_engine.py  main.py  pyproject.toml  requirements.txt  utils.py
helper/: bahan_pokok.py  ihk.py
lib/: prompt.py
routes/: bahan_pokok.py  clustering.py  ihk_forecast.py
temp_uploads/: Harga_pangan_harian.xlsx  Harga_pangan_updated.xlsx  IHK.xlsx  IHK_updated.xlsx  ~$Harga_pangan_harian.xlsx
